tests/render_types/annotation_inference_regression_test/test.js
import type { R } from "./b";
1 as R; // error
